--- a/packages/homework4/CMakeLists.txt
+++ b/packages/homework4/CMakeLists.txt
@@ -50,7 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   hw4.msg
+   hw4_msg.msg
  )
 
 ## Generate services in the 'srv' folder
